feat: implement Welcome screen and Sign Up UI with custom fields

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ flutter:
   assets:
      - assets/images/splash.png
      - assets/images/onboarding_image.png
+     - assets/icons/google.png
+     - assets/icons/facebook.png
+     - assets/icons/phone.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
