--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
      - assets/images/fig2.png
      - assets/images/fig3.png
      - assets/images/fig4.png
+     - assets/images/fruit_shop.png
      - assets/icons/bar_icon1.svg
      - assets/icons/bar_icon2.svg
      - assets/icons/bar_icon3.svg
